@@ -372,7 +372,7 @@ class SvnCommitBuilder(RootCommitBuilder):
                                                    base_rev))
 
         # Open paths leading up to branch
-        for i in range(1, len(elements)-1):
+        for i in range(0, len(elements)-1):
             # Does directory already exist?
             ret.append(self.editor.open_directory(
                 "/".join(existing_elements[0:i+1]), ret[-1], -1, self.pool))
